criação da class square

--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,11 @@ img {
     font-weight: bold;
     padding: 1rem;
 }
+
+.square{
+    display: block;
+    width: 150px;
+    height: 150px;
+    background-color: var(--main-color);
+
+}
