--- a/css/style.css
+++ b/css/style.css
@@ -1,187 +1,286 @@
 :root {
-    --main-color:#d92123;
-    --primary-text-color:#fff;
-    --secondary-text-color:#191919;
-    --secondary-color:#868686;
-    --tertiary-color:#eff3f4;
-    --secondary-bg-color:#5c1011;
-}
-
-* {
+    --main-color: #d92123;
+    --primary-text-color: #fff;
+    --secondary-text-color: #191919;
+    --secondary-color: #868686;
+    --tertiary-color: #eff3f4;
+    --secondary-bg-color: #5c1011;
+  }
+   
+  * {
     font-family: "Lato";
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-a {
+  }
+   
+  a {
     text-decoration: none;
-}
-
-img {
+  }
+   
+  img {
     width: 100%;
-}
-
-i {
+  }
+   
+  i {
     background-color: var(--main-color);
     color: var(--primary-text-color);
     font-size: 1.5rem;
     padding: 1rem;
-}
-
-/* id */
-#header{
+  }
+   
+  /* id */
+  #header {
     min-height: 90vh;
     background-image: url("../images/main_banner4.png");
     background-size: cover;
     background-position: center;
     color: var(--primary-text-color);
     margin-bottom: 2rem;
-}
-
-#inner-header{
+  }
+   
+  #inner-header {
     /* padrão linha */
     display: flex;
     /* alinhamento é horizontal, eixo x */
     justify-content: space-between;
     /* alinhamento vertical, eixo y */
     align-items: center;
-}
-
-#brand {
+  }
+   
+  #brand {
     background-color: var(--main-color);
     padding: 1rem;
-}
-
-#navbar {
+  }
+   
+  #navbar {
     display: flex;
     gap: 2rem;
     text-transform: uppercase;
     margin-right: 2rem;
-}
-
-#navbar a {
+  }
+   
+  #navbar a {
     color: var(--primary-text-color);
     font-weight: bold;
     padding: 1rem;
-}
-
-.banner.active{
+  }
+   
+  .banner.active {
     opacity: 1; /* banner ativo é mostrado */
-}
-
-.banner{
+  }
+   
+  .banner {
     max-width: 45%;
     opacity: 0;
     padding: 4rem;
     position: absolute;
-}
-
-.banner h2{
+  }
+   
+  .banner h2 {
     font-size: 4rem;
     margin-bottom: 1.2rem;
     position: relative;
-    z-index:2;
-}
-
-.banner p{
+    z-index: 2;
+  }
+   
+  .banner p {
     font-size: 1.5rem;
-}
-
-.square{
-    display:block;
+  }
+   
+  .square {
+    display: block;
     width: 150px;
     height: 150px;
     background-color: var(--main-color);
     position: absolute;
     left: 20px;
     top: 40px;
-    z-index:1;
-}
-
-.dots{
-    display:flex;
-    gap:2rem;
+    z-index: 1;
+  }
+   
+  .dots {
+    display: flex;
+    gap: 2rem;
     position: absolute;
     bottom: 9rem;
-    left:3rem;
-}
-
-.dot{
+    left: 3rem;
+  }
+   
+  .dot {
     width: 20px;
     height: 20px;
     background-color: var(--secondary-color);
-}
-
-.dot.active{
+  }
+   
+  .dot.active {
     background-color: var(--secondary-bg-color);
-}
-
-#other-services{
+  }
+   
+  /* Áreas de atuação */
+  .text-image-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+   
+  .text-container {
+    display: flex;
+    flex: 2 1 0;
+    gap: 2rem;
+    flex-direction: column;
+    justify-content: center;
+    text-align: right;
+  }
+   
+   
+  .image-container {
+    flex: 1 1 300px;
+    position: relative;
+  }
+   
+  .image-container i {
+   
+  }
+   
+  .section-tittle {
+    color: var(--main-color);
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+   
+  .section-subtittle {
+    color: var(--secondary-color);
+    font-size: 2rem;
+  }
+   
+  .btn {
+    padding: 1.2rem 1.8rem;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: bold;
+    background-color: var(--main-color);
+    color: var(--primary-text-color);
+    align-self: end;
+  }
+   
+  #other-services {
     width: 100%;
     display: flex;
-    gap:2rem;
+    gap: 2rem;
     padding: 2rem;
-}
-
-.service{
+  }
+   
+  .service {
     position: relative;
-}
-
-.service i{
+  }
+   
+  .service i {
     position: absolute;
-    left:0;
-    top:0;
-}
-
-.service-info{
+    left: 0;
+    top: 0;
+  }
+   
+  .service-info {
     background-color: var(--tertiary-color);
     padding: 2rem 1.4rem;
     min-height: 250px;
-}
-
-.service h4{
+  }
+   
+  .service h4 {
     font-size: 1.8rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
-}
-/* Sectio about - Sobre Nós */
-#about{
+  }
+   
+  /* Section about - Sobre nós */
+  #about {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     gap: 2rem;
-}
-#about-text{
-    background-image: url(../images/pattern.png);
+  }
+   
+  #about-text {
+    background-image: url("../images/pattern.png");
     background-size: cover;
     background-position: center;
     color: var(--primary-text-color);
     display: flex;
     flex: 1 1 0;
-    /* flex: grow shrink basis */
-    /* grow - define quanto o elemento cresce em relação aos outros */
-    /* shrink -define o quanto ele encolhe quando não há espaço */
-    /* basis - define o tamanho inicial do elemento antes de aplicar o crescimento e encolhimento */
+    /* flex: grow shrink basis. */
+    /* grow - define quanto o elemento cresce em relação aos outros. */
+    /* shrink - define quando ele encolhe quando não há espaço. */
+    /* basis - define o tamanho inicial do elemento antes de aplicar o crescimento e encolhimento. */
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
-    padding: 2rem;
     padding: 4rem 3rem;
-
-}
-
-#about-text .section-subtitle, 
-#about-text .section-title{
-    color: var (--primary-text-color)
-
-} 
-#about-text i {
+  }
+   
+  #about-text .section-subtittle,
+  #about-text .section-title {
+    color: var(--primary-text-color);
+   
+  }
+   
+   
+  /* Sobre Nós */
+  #about-text i {
     background-color: transparent;
-
-}
-
-.about-description{
+  }
+   
+  .about-description {
     display: flex;
-    gap: 2rem;
-}
+    align-items: center;
+  }
+   
+  .about-description h4 {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+   
+  #about-data {
+    display: flex;
+    flex: 1 1 0;
+    flex-wrap: wrap;
+    padding: 2rem;
+  }
+   
+  #about-data .data {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    margin-top: -1px;
+    margin-left: -1px;
+  }
+   
+  #about-data .data i {
+    background-color: transparent;
+    color: var(--main-color);
+    font-size: 4rem;
+    padding: 0;
+  }
+   
+  #about-data .data:first-child {
+    border-right: 1px solid var(--secondary-text-color);
+    border-bottom: 1px solid var(--secondary-text-color);
+  }
+   
+  #about-data .data:last-child {
+    border-left: 1px solid var(--secondary-text-color);
+    border-top: 1px solid var(--secondary-text-color);
+  }
+   
+  .data .number {
+    font-size: 4rem;
+    font-weight: 900;
+  }
+   
+  .data .text {
+    text-transform: uppercase;
+  }
+  /* ********** */
