--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@ i {
   flex-wrap: wrap;
   gap: 2rem;
 }
- 
 .text-container {
   display: flex;
   flex: 2 1 0;
@@ -133,26 +132,21 @@ i {
   text-align: right;
   font-weight: bold;
 }
- 
 .image-container {
   flex: 1 1 300px;
   position: relative;
 }
- 
 .image-container i {
   position: absolute;
 }
- 
 .section-title {
   color: var(--main-color);
   text-transform: uppercase;
 }
- 
 .section-subtitle {
   color: var(--secondary-text-color);
   font-size: 2rem;
 }
- 
 .btn {
   padding: 1.2rem 1.8rem;
   text-transform: uppercase;
@@ -198,7 +192,6 @@ i {
   align-items: center;
   gap: 2rem;
 }
- 
 #about-text {
   background-image: url("../images/pattern.png");
   background-size: cover;
@@ -206,10 +199,10 @@ i {
   color: var(--primary-text-color);
   display: flex;
   flex: 1 1 0;
-  /* flex: grow shrink basis. */
-  /* grow - define quanto o elemento cresce em relação aos outros. */
-  /* shrink - define quando ele encolhe quando não há espaço. */
-  /* basis - define o tamanho inicial do elemento antes de aplicar o crescimento e encolhimento. */
+  /* flex: grow shrink basis */
+  /* grow - define quanto o elemento cresce em relação aos outros */
+  /* shrink - define quanto ele encolhe quando não há espaço */
+  /* basis - define o tamanho inicial do elemento antes de aplicar o crescimento e encolhimento */
   flex-direction: column;
   justify-content: center;
   gap: 2rem;
@@ -221,7 +214,6 @@ i {
   color: var(--primary-text-color);
 }
  
-/* Sobre Nós */
 #about-text i {
   background-color: transparent;
 }
@@ -254,47 +246,41 @@ i {
   margin-left: -1px;
 }
  
+#about-data .data:first-child {
+  border-right: 1px solid var(--secondary-text-color);
+  border-bottom: 1px solid var(--secondary-text-color);
+}
+#about-data .data:last-child {
+  border-left: 1px solid var(--secondary-text-color);
+  border-top: 1px solid var(--secondary-text-color);
+}
+ 
 #about-data .data i {
   background-color: transparent;
   color: var(--main-color);
   font-size: 4rem;
   padding: 0;
 }
- 
-#about-data .data:first-child {
-  border-right: 1px solid var(--secondary-text-color);
-  border-bottom: 1px solid var(--secondary-text-color);
-}
- 
-#about-data .data:last-child {
-  border-left: 1px solid var(--secondary-text-color);
-  border-top: 1px solid var(--secondary-text-color);
-}
- 
 .data .number {
   font-size: 4rem;
   font-weight: 900;
 }
- 
 .data .text {
   text-transform: uppercase;
 }
-/* ********** */
+/* ******** */
 /* Depoimentos */
 #testimonial {
   display: flex;
   align-items: center;
 }
- 
-#testimonial-information {
+#testimonial-informaton {
   padding: 3rem;
 }
- 
 .author img {
   width: 100px;
   height: 100px;
 }
- 
 .author .author-name {
   color: var(--main-color);
   text-transform: uppercase;
@@ -306,56 +292,334 @@ i {
 .author .author-job {
   color: var(--secondary-text-color);
 }
-
-#team h2 {
-  text-align: center; /* Centraliza o texto */
-  flex-direction: column;
+ 
+#team {
+  display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  flex-direction: column;
+}
+ 
+#team h2 {
+  color: var(--secondary-text-color);
   font-size: 3rem;
+  text-align: center;
+  width: 50%;
 }
-
-.break-line {
-  display: block;
-}
-
-
-#team span{
+ 
+#team span {
   color: var(--main-color);
-
 }
-
+ 
 .employees {
   display: flex;
-  justify-content: center; /* Centraliza os funcionários */
-  text-align: center; /* Centraliza o texto abaixo das imagens */
 }
-
+ 
 .employee {
-  display: flex;
-  flex-direction: column; /* Mantém o texto abaixo da imagem */
-  align-items: center; /* Centraliza tudo dentro do bloco */
+  margin: 1rem;
 }
-
-.employee img {
-  flex: 1 1 0;
-  padding: 1.3rem;
-}
-
+ 
 .employee-name {
-  font-size: 16px;
-  font-weight: bold;
-  color:var(--main-color); /* Nome em vermelho */
-  margin-top: 10px;
-  text-transform: uppercase; /* Deixa o nome em caixa alta */
+  color: var(--main-color);
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
 }
-
+ 
 .employee-role {
-  font-size: 14px;
-  color:var(--secondary-text-color); /* Cor padrão para o cargo */
+  color: var(--secondary-text-color);
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bolder;
+}
+ 
+#contact {
+  background-color: var(--main-color);
+  gap: 0;
+  padding-bottom: 5rem;
+}
+ 
+#contact-information {
+  position: relative;
+  text-align: left;
+  padding: 3rem;
+  flex: 1 1 0;
+}
+ 
+#contact-information .section-subtitle {
+  color: var(--primary-text-color);
+  text-transform: uppercase;
+}
+ 
+#contact-information i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--primary-text-color);
+  color: var(--main-color);
+  font-size: 2.5rem;
+  padding: 2rem;
+}
+ 
+#contact-information form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+ 
+#contact-information .form-control {
+  display: flex;
+  gap: 1rem;
+}
+#contact-information input,
+#contact-information textarea {
+  flex: 0.5;
+  padding: 1rem;
+  border: none;
+}
+ 
+#contact-information .btn {
+  align-self: start;
+  border: 2px solid var(--primary-text-color);
+  font-size: 1.2rem;
+  transition: 0.4s;
+}
+ 
+#contact-information .btn:hover {
+  background-color: var(--primary-text-color);
+  color: var(--main-color);
+}
+ 
+/* COMEÇO DO RODAPÉ */
+ 
+#footer {
+  color: var(--primary-text-color);
+  background-color: var(--secondary-bg-color);
+  display: flex;
+  justify-content: space-around;
+  padding: 3rem 3rem 5rem;
+}
+ 
+#footer i {
+  font-size: 1rem;
+  padding: 0.3rem;
+}
+ 
+#footer a {
+  color: var(--primary-text-color);
+}
+ 
+.contact-info,
+.links-container {
+  width: 20%;
+}
+ 
+.footer-brand {
+  margin-bottom: 2rem;
+}
+ 
+.footer-brand h2 {
+  background-color: var(--main-color);
+  margin-bottom: 0.5rem;
+  padding: 1rem;
+}
+ 
+.contact-info p {
+  margin-bottom: 1rem;
+}
+ 
+.contact-info p i {
+  background-color: transparent;
+  padding: 0;
+  color: var(--main-color);
+}
+ 
+.social-networks p {
+  margin-bottom: 1rem;
+}
+ 
+.networks {
+  margin-top: 2rem;
+  display: flex;
+  gap: 1rem;
+}
+ 
+#footer .networks i {
+  padding: 1rem;
+}
+ 
+.links-container h4 {
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+}
+ 
+.links-container nav {
+  display: flex;
+  flex-direction: column;
+}
+ 
+.links-container nav a {
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid var(--secondary-color);
+}
+ 
+.phone-number {
+  display: flex;
+  border: 1px solid var(--main-color);
+  gap: 1rem;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+ 
+.phone-info {
+  color: var(--secondary-color);
+}
+ 
+/* FIM DO RODAPÉ */
+ 
+/*  MOBILE NAVBAR  */
+ 
+#menu,
+#close-menu {
+  font-size: 2rem;
+  padding: 1rem;
+  display: none;
+}
+ 
+#close-menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+ 
+#mobile-navbar{
+  position: fixed;
+  top: 0;
+  left: 100%;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.95);
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 2rem;
+  transition: 0.4s;
+  z-index: 5;
  
 }
+ 
+#mobile-navbar.menu-active{
+  left: 0;
+}
+ 
+ 
+#mobile-navbar a{
+  color: var(--primary-text-color);
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--main-color);
+ 
+ 
+}
+ 
+@media (max-width: 450px) {
+  body {
+    /*  Esconde o scrool lateral se sobrar a direita  */
+    overflow-x: hidden;
+  }
+  i {
+    padding: 1.5rem;
+    font-size: 2rem;
+  }
+  #navbar {
+    display: none;
+  }
+  #menu,
+  #close-menu {
+    display: block;
+  }
 
+  /* banner e texto do banner */
+  .banner{
+    max-width: 100%;
+    padding: 4rem 2rem;
+}
+.banner h2{
+  font-size: 3rem;
+}
+.banner p{
+  font-size: 1.2rem;
+}
+  /* Areas de Atuação */
+  .btn{
+    align-self: initial;
+  }
+  .image-container{
+    flex: 1 1 0;
+  }
+  #other-services{
+    flex-wrap: wrap; /* quebra a linha */
+  }
 
+  /* Sobre nós */
+  #about {
+
+  }
+  #about-text,
+  #abaut-data {
+    flex: 1 1 100%;
+  }
+  .about-description {
+    gap: 1rem;
+  }
+  .about-description i {
+    padding: 0;
+    min-width: 40px;
+  }
+  #about #about-data .data {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid var(--secondary-text-color);
+  }
+  #about #about-data .data{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid var(--secondary-text-color);
+  }
+
+  /* Depoimentos */
+  .text-container {
+    text-align: center;
+    padding: 2rem;
+  }
+
+  /* Colaboradores */
+  #team {
+    margin-top: 2rem;
+    font-size: 2rem;
+
+  }
+  .employees {
+    flex-wrap: wrap;
+  }
+
+  /* Contato */
+  #contact {
+    padding-bottom: 0;
+
+  }
+  #contact-information {
+    padding: 7rem 1rem;
+  }
+  #contact-information. .form-control{
+    flex-direction: column;
+
+  } 
+  #contact-information .btn {
+    align-self: auto;
+  }
+}
 
