--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
   --secondary-color: #868686;
   --tertiary-color: #eff3f4;
   --secondary-bg-color: #5c1011;
-}
  
 * {
   font-family: "Lato";
@@ -294,21 +293,29 @@ i {
 }
  
 #team {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  margin-bottom: 2rem;
+  position: relative;
 }
  
 #team h2 {
-  color: var(--secondary-text-color);
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
-  width: 50%;
+  max-width: 1000px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 2; /* Posição */
 }
  
 #team span {
   color: var(--main-color);
+}
+#team .square {
+  background-color: var(--tertiary-color);
+  width: 100px;
+  height: 100px;
+  left: 50%;
+  margin-left: -50px;
+  top: -25px;
 }
  
 .employees {
@@ -562,6 +569,10 @@ i {
   }
  
   /* Sobre Nós */
+  #about {
+ 
+  }
+ 
   #about,
   #about-data {
     flex: 1 1 100%;
@@ -587,10 +598,19 @@ i {
  
   /* Colaboradores */
   #team {
-    margin-top: 2rem;
+    position: relative; /* Posição */
+    margin-bottom: 2rem;
   }
   #team h2 {
     font-size: 2.5rem;
+    text-align: center;
+    max-width: 1000px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2; Posição /* Posição */
+  }
+  #team h2 span {
+    color: var(--main-color);
   }
   .employees {
     flex-wrap: wrap;
@@ -608,39 +628,5 @@ i {
   }
   #contact-information .btn {
     align-self: auto;
-  }
- 
-  /* Rodapé - Footer */
- /* Rodapé - Footer */
- 
-  #footer {
-    flex-wrap: wrap;
-  }
- 
-  .contact-info,
-  .links-container {
-    width: 100%;
-  }
- 
-  #footer i {
-    font-size: 2rem;
-    padding: 1rem;
-  }
- 
-  .footer-brand {
-    text-align: center;
-  }
- 
-  .networks{
-    margin-bottom: 3rem;
-  }
- 
-  .links-container{
-    margin-bottom: 1rem;
-  }
- 
-  .links-container h4{
-    margin-bottom: 1.5rem;
-   
   }
 }
